<resources>
    // MainActivity
    <string name="app_name">TODO</string>
    <string name="settings">설정</string>
    <string name="addtodo">+ 할 일 추가</string>
    <string name="close">닫기</string>
    <string name="save">저장</string>
    <string name="todo">할 일</string>
    <string name="TODO">TODO.</string>
    <string name="update_title">TODO 수정</string>
    <string name="update">수정</string>
    <string name="cancel">취소</string>
    <string name="hinttodo">추가할 할 일을 입력해 주세요.</string>
    <string name="StringValue">이미지가 존재하지 않습니다.</string>
    // SettingsActivity
    <string name="settings_view">화면</string>
    <string name="settings_font">글자 크기</string>
    <string name="settings_language">언어</string>
    <string name="settings_back">배경 색</string>
    <string name="settings_general">일반</string>
    <string name="settings_version">버전</string>
    <string name="settings_review">리뷰 쓰러가기</string>
</resources>
