<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="15sp"
    android:layout_marginEnd="15sp"
    android:layout_marginTop="15sp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_keyboard_arrow_left"
            android:contentDescription="@string/StringValue"
            android:id="@+id/iv_before"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10sp"
            android:textSize="20sp"
            android:textColor="@color/TextColor"
            android:text="@string/settings"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_view"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="10sp"
        android:layout_marginStart="5sp"
        android:textSize="15sp"
        android:textColor="@color/settingsColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingStart="10dp"
        android:paddingEnd="5sp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_font"
            android:layout_weight="9"
            android:textSize="15sp"
            android:textColor="#000000"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_keyboard_arrow_right"
            android:contentDescription="@string/StringValue"
            android:layout_weight="1" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:contentDescription="@string/StringValue"
        android:background="#DFDFDF"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_language"
            android:layout_weight="9"
            android:textSize="15sp"
            android:textColor="@color/TextColor"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_keyboard_arrow_right"
            android:contentDescription="@string/StringValue"
            android:layout_weight="1" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DFDFDF"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_back"
            android:layout_weight="9"
            android:textSize="15sp"
            android:textColor="@color/TextColor"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_keyboard_arrow_right"
            android:contentDescription="@string/StringValue"
            android:layout_weight="1" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DFDFDF"
        android:layout_marginBottom="8dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_general"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="10sp"
        android:layout_marginStart="5sp"
        android:textSize="15sp"
        android:textColor="@color/settingsColor"/>

    <LinearLayout
        android:id="@+id/ll_notificationSettings"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_version"
            android:layout_weight="9"
            android:textSize="15sp"
            android:textColor="#000000"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_keyboard_arrow_right"
            android:contentDescription="@string/StringValue"
            android:layout_weight="1" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DFDFDF"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:id="@+id/ll_termsOfUse"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_review"
            android:layout_weight="9"
            android:textSize="15sp"
            android:textColor="@color/TextColor"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_keyboard_arrow_right"
            android:contentDescription="@string/StringValue"
            android:layout_weight="1" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DFDFDF"
        android:layout_marginBottom="8dp"/>


</LinearLayout>